--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Ugly Webby</h1>
-        <div>
+        <h1><p id="t-text1">Ugly</p><p id="t-text2">Webby</p></h1>
+        <div id="div1">
             <h3>Some lorem ipsum.</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi consequuntur rem amet. Consequuntur aliquid quam nesciunt dignissimos quaerat. <cite>At quos minus aliquam esse maiores? Autem sunt odio dolores accusamus fugit!<cite></p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima unde <em>culpa</em> impedit quas iusto ipsam recusandae obcaecati. Eveniet maxime autem blanditiis eos. Veniam alias sapiente error a voluptas voluptate illo.</p>
         </div>
-        <div>
+        <div id="div2">
             <p>The <code>push()</code> method adds one or more elements to the end of an array and returns the new length of the array.</p>
         </div>
-        <div>
+        <div id="div3">
 
             <h3>Some arguments.</h3>
             
@@ -25,7 +25,7 @@
                 <li>The first two arguments are now disproven af.</li>
             </ul>
         </div>
-        <div>
+        <div id="div4">
             <h3>How many things are there?</h3>
             <ol>
                 <li>Thing 1.</li>
