--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
             <h3>Some arguments.</h3>
             
-            <ul>
+            <ul id="ul1">
                 <li>This is an argument.</li>
-                <li>This is a counterpoint!</li>
+                <li class="li-d3">This is a counterpoint!</li>
                 <li>But holy $#!%, <strong>this</strong> argument blows the other arguments away.</li>
-                <li>The first two arguments are now disproven af.</li>
+                <li class="li-d3">The first two arguments are now disproven af.</li>
             </ul>
         </div>
         <div id="div4">
